--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,7 @@
             "version": "latest"
         },
         "ghcr.io/devcontainers/features/powershell:1": {
-            "version": "7.4"
+            "version": "latest"
         },
         "ghcr.io/azure/azure-dev/azd": {
             "version": "latest"
